# TensorOps

./: .gitignore  cmakelists.txt  dockerfile  entrypoint.sh  loss.py  main.py  model.py  node.py  optim.py  precompile_kernels.py  pyproject.toml  readme.md  reproduce_issue.py  requirements.txt  scratch_mnist_local.py  setup.py  test.py  test_ce.py  test_ce2.py  test_log.py  test_log2.py  test_log3.py  test_matmul.py  test_suite.py  utils.py
.github/: publish.yml
TensorOps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: basicfitter.py  bestfunction.py  deepnetwork.py  exampleutils.py  mlx_examples.py  noisyfitter.py  straightlinefitter.py  testbasicfitter.py  testbestfunction.py  testnoisyfitter.py  teststraightlinefitter.py  testutils.py  visualisenetwork.py
examples/pytorch/: activation.py  basicfitter.py  basicmlp.py  bestfunction.py  helpers.py  layer.py  mlp.py  mnist.py  noisyfitter.py  noisymlp.py  regression.py  straightlinefitter.py  tensordemo.py
examples/tensorops/: activation.py  basicfitter.py  basicmlp.py  bestfunction.py  helpers.py  layer.py  mlp.py  mnist.py  noisyfitter.py  regression.py  straightlinefitter.py  tensordemo.py  visualisenetwork.py
examples/tensorops/models/: simplenet.py
tensorops/: Cargo.toml  __init__.py  a.py  b.py  backend.py  basicfitter.py  bestfunction.py  bindings.cpp  c.py  device.py  loss.py  mlx_runtime.py  model.py  nano.py  newtensor.py  node.py  optim.py  tensor.pkl  tensor.py  tensor_backend.cpp  tensor_backend.hpp  tensorloss.py  tensormodel.py  tensorpy.py  tensorutils.py  test.py
tensorops/src/: helpers.rs  kernel.cl  kernel.rs  lib.rs  main.rs  runtime.rs  tensor.rs
tensorops/utils/: data.py  models.py  onnx_exporter.py  tensorutils.py
