[project]
name = "TensorOps"
version = "1.0.0"
description = "A Work-In-Progress Autograd Library"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib==3.10.5",
    "matplotlib-inline==0.1.6",
    "pandas==1.5.3",
    "networkx==3.0rc1",
    "tqdm==4.66.5",
    "setuptools==75.8.0",
    "maturin==1.8.3",
    "scikit-learn==1.6.0",
]
[project.optional-dependencies]

    pytorch=[    
        "torch==2.4.0",
        "torchvision==0.19.0",
    ]
    mac=[
        "mlx==0.30.1"
    ]

[project.urls]
Homepage = "https://github.com/andreaslam/tensorops"
Issues = "https://github.com/andreaslam/tensorops/issues"

[tool.setuptools]
packages = ["tensorops"]

[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"